# autopilot2

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  TASKS.md  goal-draft.md  goal.md  pyproject.toml  sandboxed-user-setup.md
.cc-autopilot/: .gitignore  cron.yaml  ideation_state.md  operator_log.md  progress.md  retry_state.json
.cc-autopilot/ideation_proposals/: TB-203.json  TB-204.json  TB-205.json  TB-206.json  TB-207.json  TB-208.json  TB-209.json  TB-214.json  TB-215.json  TB-216.json  TB-224.json  TB-225.json  TB-226.json  TB-227.json  TB-228.json  TB-229.json  TB-230.json  TB-231.json  TB-232.json  TB-233.json  TB-234.json  TB-237.json  TB-238.json  TB-239.json  TB-240.json  TB-241.json  TB-242.json  TB-243.json  TB-244.json  TB-245.json  TB-246.json  TB-247.json  TB-252.json  TB-257.json  TB-258.json  TB-259.json  TB-269.json  TB-270.json  TB-272.json  TB-273.json  (+87 more)
.cc-autopilot/insights/: _index.md  test-suite-slowness-2026-05-17.md  validator-judge-timeout-2026-05-18.md
.cc-autopilot/tasks/: accept-codex-chatgpt-login-oauth-auth-js.md  adapter-contract-parity-test-suite-both.md  adapter-provided-default-models-heavy-an.md  add-a-6-hourly-real-sdk-smoke-cron-job-d.md  add-a-follow-live-event-monitor-mode-to.md  add-a-goal-md-authoring-guide-section-to.md  add-ap2-audit-cli-verb-for-retrospective.md  add-ap2-auto-approve-opt-in-mode-that-sk.md  add-ap2-auto-approve-per-task-token-cap.md  add-ap2-rewind-focus-cli-verb-emit-synth.md  add-ap2-tests-conftest-py-shield-set-ap2.md  add-config-get-core-value-helper-migrate.md  add-daemon-state-json-to-the-ap2-init-gi.md  add-done-when-section-to-ap2-init-s-goal.md  add-ideate-force-to-mm-handler-chat-verb.md  add-llm-driven-dependency-coherence-chec.md  add-llm-driven-file-path-coherence-check.md  add-mattermost-thread-read-mcp-tool-for.md  add-operator-cli-verbs-reference-section.md  add-roadmap-complete-skip-gate-to-maybe.md  add-skip-goal-alignment-flag-to-ap2-add.md  add-stats-dashboard-at-stats-html-stats.md  add-test-every-cli-verb-has-test-referen.md  add-update-goal-as-an-operator-queue-op.md  add-usage-token-cost-dashboard-to-the-we.md  add-validator-judge-noisy-discriminator.md  add-verification-bullet-shell-syntax-con.md  agentadapter-abc-claudecodeadapter-move.md  ap2-check-lint-tb-76-shell-pitfalls-in-v.md  ap2-classify-tb-n-delete-test-verdict-op.md  ap2-config-list-get-set-validate-cli-sur.md  ap2-doctor-warns-when-ap2-auto-approve-1.md  ap2-doctor-warns-when-ap2-auto-unfreeze.md  ap2-doctor-warns-when-ap2-verify-timeout.md  ap2-frozen-tb-n-consolidated-triage-view.md  ap2-ideate-cli-for-manual-ideation-trigg.md  ap2-ideate-hint-text-per-cycle-operator.md  ap2-reject-tb-n-cli-chat-explicit-reject.md  ap2-status-cli-surface-active-attention.md  ap2-status-enumerates-active-components.md  (+275 more)
.claude/: settings.json
ap2/: AGENTS.md  README.md  __init__.py  _shared.py  architecture.md  attention.py  audit.py  auto_approve.py  auto_unfreeze.py  automation_stats.py  automation_status.py  backfill.py  board.py  board_edits.py  briefing_validators.py  channel.py  check.py  cli.py  cli_board.py  cli_config.py  cli_daemon.py  cli_diagnostic.py  cli_review.py  config.py  config_compat.py  config_introspect.py  config_loader.py  config_writer.py  core_config_schema.py  cron.default.yaml  cron.py  cron_handlers.py  daemon.py  daemon_state.py  diagnose.py  doctor.py  env_reload.py  event_monitor.py  events.py  focus_advance.py  (+41 more)
ap2/adapters/: __init__.py  base.py  claude_code.py  codex.py  select.py
ap2/components/: __init__.py
ap2/components/attention/: __init__.py  impl.py  manifest.py
ap2/components/auto_approve/: __init__.py  impl.py  manifest.py
ap2/components/auto_unfreeze/: __init__.py  impl.py  manifest.py
ap2/components/communication/: __init__.py  channels.py  impl.py  manifest.py
ap2/components/cron/: __init__.py  impl.py  manifest.py
ap2/components/focus_advance/: __init__.py  manifest.py
ap2/components/ideation/: __init__.py  impl.py  manifest.py
ap2/components/janitor/: __init__.py  impl.py  manifest.py
ap2/components/mattermost/: __init__.py  impl.py  manifest.py
ap2/components/validator_judge/: __init__.py  impl.py  manifest.py
ap2/components/verifier_judge/: __init__.py  impl.py  manifest.py
ap2/skills/ap2-board-ops/: SKILL.md
ap2/skills/ap2-config/: SKILL.md
ap2/skills/ap2-failure-recovery/: SKILL.md
ap2/skills/ap2-ideation-goals/: SKILL.md
ap2/skills/ap2-observability/: SKILL.md
ap2/skills/ap2-task/: SKILL.md
ap2/skills/migrate-to-ap2/: SKILL.md
ap2/tests/: _briefing_fixtures.py  _source_registry.py  conftest.py  test_adapter_default_models.py  test_adapter_parity.py  test_agent_adapter.py  test_agent_backend_selection.py  test_agents_md_packaging.py  test_approve.py  test_audit_cmd.py  test_auto_approve_default_on.py  test_autounfreeze_grep_binary_skip.py  test_backfill_proposals.py  test_board.py  test_board_edits.py  test_briefing.py  test_briefing_validators.py  test_channel_adapters.py  test_check.py  test_cli.py  test_cli_board.py  test_cli_daemon.py  test_cli_diagnostic.py  test_cli_review.py  test_codex_adapter.py  test_component_enable_unified.py  test_components_disabled.py  test_concurrent_mm.py  test_config.py  test_conftest_judge_shield.py  test_control_run_usage.py  test_core_import_direction.py  test_coverage_drift.py  test_cron.py  test_cron_defaults.py  test_daemon_message_log.py  test_daemon_recovery.py  test_daemon_web.py  test_default_posture.py  test_dep_validator_judge.py  (+156 more)
ap2/tests/e2e/: _fakes.py  conftest.py  test_auto_diagnose.py  test_concurrent_mm.py  test_daemon_commit.py  test_mattermost_cron.py  test_minimal_kernel_tick.py  test_mixed_backend_end_to_end.py  (+16 more)
plan/: sandboxed-user-setup.md
scripts/: deploy-skills.sh  monitor_events.py
skills/ap2/: SKILL.md
skills/ap2-board-ops/: SKILL.md
skills/ap2-config/: SKILL.md
skills/ap2-failure-recovery/: SKILL.md
skills/ap2-ideation-goals/: SKILL.md
skills/ap2-observability/: SKILL.md
skills/ap2-task/: SKILL.md
skills/migrate-to-ap2/: SKILL.md
(+18 files in other folders)
