[project]
name = "autopilot2"
version = "0.3.0"
description = "External Python daemon that drives a Claude Code project through a list of tasks. Each unit of work runs as a fresh Claude Agent SDK query; shared state lives on disk."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "All Rights Reserved" }
authors = [{ name = "Li Zhang" }]
dependencies = [
    "claude-agent-sdk>=0.2.87,<0.3",
    "psutil",
    "mistune>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0"]
# Opt-in second backend. `claude-agent-sdk` (above) is the always-installed
# base, so a bare `pip install autopilot2` / `uv sync` stays Claude-only. The
# codex backend lazily `import codex_sdk` (ap2.adapters.load_codex_sdk) only at
# first dispatch; this extra is what gives that import an install path. The
# distribution name matches the daemon-start gate's `uv pip install codex-sdk`
# remediation hint. Unpinned — no version floor is known yet.
codex = ["codex-sdk"]

[project.scripts]
ap2 = "ap2.cli:main"

[project.urls]
Repository = "https://github.com/lzhang/autopilot2"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ap2", "ap2.adapters", "ap2.tests", "ap2.tests.e2e", "ap2.tests.smoke"]

[tool.setuptools.package-data]
ap2 = ["*.md", "*.yaml"]

[tool.pytest.ini_options]
testpaths = ["ap2/tests"]
pythonpath = ["."]
norecursedirs = []
