[project]
name = "autopilot2"
version = "0.3.0"
description = "External Python daemon that drives a Claude Code project through a list of tasks. Each unit of work runs as a fresh Claude Agent SDK query; shared state lives on disk."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "PolyForm Noncommercial License 1.0.0" }
authors = [{ name = "Atom Tech Consulting", email = "ap2@atomtechconsulting.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "claude-agent-sdk>=0.2.87,<0.3",
    "psutil",
    "mistune>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0"]
# Opt-in second backend. `claude-agent-sdk` (above) is the always-installed
# base, so a bare `pip install autopilot2` / `uv sync` stays Claude-only. The
# codex backend lazily `import openai_codex` (via the ap2.adapters codex loader)
# only at first dispatch; this extra is what gives that import an install path.
# `openai-codex` is OpenAI's official Codex SDK (import name `openai_codex`); it
# bundles the Codex CLI binary and matches the daemon-start gate's
# `uv pip install openai-codex` remediation hint. Unpinned — no version floor is
# known yet.
codex = ["openai-codex"]

[project.scripts]
ap2 = "ap2.cli:main"

[project.urls]
Repository = "https://github.com/atom-tech-consulting/autopilot2"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ap2", "ap2.adapters", "ap2.tests", "ap2.tests.e2e", "ap2.tests.smoke"]

[tool.setuptools.package-data]
# TB-422: ship the operator-skill bundles (`ap2/skills/<skill>/SKILL.md`) as
# installed package data so `ap2 sandbox sync-assets` can deploy them after a
# non-editable `uv tool install` / `pip install` — not only from a repo clone
# or the sdist `MANIFEST.in` graft. The recursive `skills/**/*` glob carries
# every file under each skill dir into the wheel.
ap2 = ["*.md", "*.yaml", "skills/**/*"]

[tool.pytest.ini_options]
testpaths = ["ap2/tests"]
pythonpath = ["."]
norecursedirs = []
